force-app/main/default/objects/Adyen_Adapter__mdt/fields/Auto_Capture_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Capture_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify if Auto Capture is enabled in Customer Area</description>
    <inlineHelpText>Check if Auto Capture (Immediate capture) is enabled in Adyen Customer Area</inlineHelpText>
    <label>Auto Capture Enabled</label>
    <type>Checkbox</type>
</CustomField>