force-app/main/default/objects/Adyen_Adapter__mdt/fields/Cancel_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Endpoint__c</fullName>
    <description>Endpoint used to cancel an authorized payment</description>
    <label>Cancel Endpoint</label>
    <length>64</length>
    <type>Text</type>
</CustomField>