force-app/main/default/objects/Adyen_Adapter__mdt/fields/Endpoint_Api_Version__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Api_Version__c</fullName>
    <description>The Api Version of the Endpoint, e.g. v52</description>
    <inlineHelpText>The Api Version of the Endpoint, e.g. v52</inlineHelpText>
    <label>Endpoint Api Version</label>
    <length>16</length>
    <type>Text</type>
</CustomField>