force-app/main/default/objects/Adyen_Adapter__mdt/fields/Endpoint_Method__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Method__c</fullName>
    <defaultValue>&quot;POST&quot;</defaultValue>
    <description>The HTTP Method for the endpoint. ie. POST</description>
    <inlineHelpText>The HTTP Method for the endpoint. ie. POST</inlineHelpText>
    <label>Endpoint Method</label>
    <length>16</length>
    <type>Text</type>
</CustomField>