force-app/main/default/objects/Adyen_Adapter__mdt/fields/Management_API_Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Management_API_Endpoint_Path__c</fullName>
    <label>Management API Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>