force-app/main/default/objects/Adyen_Adapter__mdt/fields/Management_API_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Management_API_Named_Credential__c</fullName>
    <description>Named Credential for the Adyen Management API</description>
    <inlineHelpText>Named Credential name for the Adyen Management API</inlineHelpText>
    <label>Management API Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>