force-app/main/default/objects/Adyen_Adapter__mdt/fields/Management_API_Version__c.field-meta.xml
<CustomField>
    <fullName>Management_API_Version__c</fullName>
    <description>Version of the Adyen Management API</description>
    <inlineHelpText>Version of the Adyen Management API</inlineHelpText>
    <label>Management API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>