force-app/main/default/objects/Adyen_Adapter__mdt/fields/Management_API_Webhook_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Management_API_Webhook_Endpoint__c</fullName>
    <label>Management API Webhook Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>