force-app/main/default/objects/Adyen_Adapter__mdt/fields/Manual_Capture_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Manual_Capture_Payment_Methods__c</fullName>
    <description>Comma-separated list of payment methods that require manual capture.</description>
    <inlineHelpText>Enter a comma-separated list of payment methods that require manual capture.</inlineHelpText>
    <label>Manual Capture Payment Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>