force-app/main/default/objects/Adyen_Adapter__mdt/fields/Package_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Package_Namespace__c</fullName>
    <description>For Adyen adyen_payment namespace</description>
    <inlineHelpText>Do not change this value</inlineHelpText>
    <label>Package Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>