force-app/main/default/objects/Adyen_Adapter__mdt/fields/Payment_Link_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Endpoint__c</fullName>
    <description>Endpoint used to create a payment link</description>
    <label>Payment Link Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>