force-app/main/default/objects/Adyen_Adapter__mdt/fields/Payment_Link_Expiry_Duration__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Expiry_Duration__c</fullName>
    <description>Expiration time of the payment link in days</description>
    <label>Payment Link Expiry Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>