force-app/main/default/objects/Adyen_Adapter__mdt/fields/Payment_Link_Return_Url__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Return_Url__c</fullName>
    <description>Website URL used for redirection after payment is completed</description>
    <label>Payment Link Return Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>