force-app/main/default/objects/Adyen_Adapter__mdt/fields/Payment_Link_Theme_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Theme_Id__c</fullName>
    <label>Payment Link Theme Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>