force-app/main/default/objects/Adyen_Adapter__mdt/fields/Refund_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Refund_Endpoint__c</fullName>
    <defaultValue>&quot;/refund&quot;</defaultValue>
    <label>Refund Endpoint</label>
    <length>64</length>
    <type>Text</type>
</CustomField>