force-app/main/default/objects/Adyen_Adapter__mdt/fields/Service_Password__c.field-meta.xml
<CustomField>
    <fullName>Service_Password__c</fullName>
    <description>Web service password.  Leave this blank if Named credential set to inject authorization header</description>
    <label>Service Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>