force-app/main/default/objects/Adyen_Adapter__mdt/fields/Service_Username__c.field-meta.xml
<CustomField>
    <fullName>Service_Username__c</fullName>
    <label>Service Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>