force-app/main/default/objects/Adyen_Adapter__mdt/fields/System_Integrator_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Integrator_Name__c</fullName>
    <description>Name of the System Integrator, working with the Merchant on installing and enabling the package</description>
    <inlineHelpText>Name of the System Integrator, working with the Merchant on installing and enabling the package</inlineHelpText>
    <label>System Integrator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>