force-app/main/default/objects/Adyen_Adapter__mdt/fields/Webhook_Id__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Id__c</fullName>
    <description>Webhook ID for the configured webhook in Adyen CA</description>
    <inlineHelpText>Stores the webhook ID after webhook creation for future reference and updates</inlineHelpText>
    <label>Webhook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>